in the process of data cleaning, removed missing values for some datasets

--- a/Data/hair_salon.ipynb
+++ b/Data/hair_salon.ipynb
@@ -120,6 +120,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "id": "0ccac254-900a-4dce-8963-f47c87d7a293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dropping missing values for each Data Table"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "9930ad83-42a7-4391-86cf-336e72dc2ec0",
    "metadata": {},
@@ -293,6 +303,7 @@
     }
    ],
    "source": [
+    "# CLIENT CANCELLATION TABLE \n",
     "client_cancel2 = client_cancel.copy()\n",
     "\n",
     "client_cancel2 = client_cancel2.dropna()\n",
@@ -326,6 +337,7 @@
     }
    ],
    "source": [
+    "# Checking If any Null values exists\n",
     "client_cancel2.isna().any()\n"
    ]
   },
@@ -356,6 +368,7 @@
     }
    ],
    "source": [
+    "# FUTURE BOOKING TABLE\n",
     "print(future_book.isna().sum())\n",
     "print(future_book.head())"
    ]
@@ -384,6 +397,7 @@
     }
    ],
    "source": [
+    "# Checking if null values exist  \n",
     "future_book2 = future_book.copy()\n",
     "future_book2 = future_book2.dropna()\n",
     "future_book2.isna().sum()"
@@ -391,11 +405,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "d7faa174-b603-4e59-939a-ae8d4a4eaa5b",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0              0\n",
+      "book_tod              235\n",
+      "book_dow                0\n",
+      "book_category           0\n",
+      "book_staff              0\n",
+      "last_category         949\n",
+      "last_staff            949\n",
+      "last_day_services       0\n",
+      "last_receipt_tot        0\n",
+      "last_dow              949\n",
+      "last_tod             1094\n",
+      "last_noshow             0\n",
+      "last_prod_flag          0\n",
+      "last_cumrev             0\n",
+      "last_cumbook            0\n",
+      "last_cumstyle           0\n",
+      "last_cumcolor           0\n",
+      "last_cumprod            0\n",
+      "last_cumcancel          0\n",
+      "last_cumnoshow          0\n",
+      "noshow                  0\n",
+      "recency                 0\n",
+      "dtype: int64\n",
+      "(1952, 22)\n",
+      "\n",
+      "\n",
+      "last_staff\n",
+      "JJ        355\n",
+      "BECKY     228\n",
+      "JOANNE    169\n",
+      "SINEAD    134\n",
+      "KELLY      97\n",
+      "HOUSE      16\n",
+      "TANYA       4\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "[nan 'JOANNE' 'KELLY' 'BECKY' 'HOUSE' 'JJ' 'SINEAD' 'TANYA']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "949"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# HAIR SALAON TABLE\n",
+    "print(hair_salon.isna().sum())\n",
+    "print(hair_salon.shape)\n",
+    "print('\\n')\n",
+    "hair_salon[['last_category','last_staff']].head(30)\n",
+    "\n",
+    "print(hair_salon['last_staff'].value_counts())\n",
+    "print('\\n')\n",
+    "print(hair_salon['last_staff'].unique())\n",
+    "\n",
+    "hair_salon['last_staff'].isna().sum()\n",
+    "\n",
+    "# hair_salon[['book_tod','last_category','last_staff', 'last_dow', 'last_tod']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "0ce05051-f1aa-4c77-b0b8-fa7dbe993e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5604508196721312\n",
+      "0.12038934426229508\n",
+      "0.48616803278688525\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1094/1952)\n",
+    "print(235/1952)\n",
+    "print(949/1952)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "f55626ec-4483-4f93-87ce-7972c74b727f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date       False\n",
+      "Code        True\n",
+      "Service    False\n",
+      "Staff      False\n",
+      "dtype: bool\n",
+      "(60, 4)\n",
+      "(59, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(no_show.isna().any())\n",
+    "print(no_show.shape)\n",
+    "\n",
+    "no_show2 = no_show.copy()\n",
+    "no_show2 = no_show2.dropna()\n",
+    "\n",
+    "print(no_show2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88c5493b-6fd9-4c6b-99c8-2dbf2f5044bd",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(receipt_transaction.isna().any())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd713139-4fa9-454b-93b2-2a7304bfbaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(service_listing.isna().any())"
+   ]
   }
  ],
  "metadata": {
