cleaned other datasets, still working on hair salon dataset

--- a/Data/hair_salon.ipynb
+++ b/Data/hair_salon.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 102,
    "id": "f55626ec-4483-4f93-87ce-7972c74b727f",
    "metadata": {},
    "outputs": [
@@ -520,37 +520,113 @@
       "(60, 4)\n",
       "(59, 4)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date       False\n",
+       "Code       False\n",
+       "Service    False\n",
+       "Staff      False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Dropping Missing values for NO shows \n",
     "print(no_show.isna().any())\n",
     "print(no_show.shape)\n",
     "\n",
-    "no_show2 = no_show.copy()\n",
-    "no_show2 = no_show2.dropna()\n",
+    "no_show = no_show.dropna()\n",
     "\n",
-    "print(no_show2.shape)"
+    "print(no_show.shape)\n",
+    "no_show.isna().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "88c5493b-6fd9-4c6b-99c8-2dbf2f5044bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Receipt        False\n",
+      "Date           False\n",
+      "Description     True\n",
+      "Client         False\n",
+      "Staff          False\n",
+      "Quantity       False\n",
+      "Amount         False\n",
+      "GST            False\n",
+      "PST            False\n",
+      "dtype: bool\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Receipt        0\n",
+       "Date           0\n",
+       "Description    3\n",
+       "Client         0\n",
+       "Staff          0\n",
+       "Quantity       0\n",
+       "Amount         0\n",
+       "GST            0\n",
+       "PST            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(receipt_transaction.isna().any())"
+    "print(receipt_transaction.isna().any())\n",
+    "\n",
+    "receipt_transaction = receipt_transaction.drop_na()\n",
+    "receipt_transaction.isna().anu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "cd713139-4fa9-454b-93b2-2a7304bfbaf4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IsActive    False\n",
+      "Code        False\n",
+      "Desc         True\n",
+      "Cate        False\n",
+      "Price       False\n",
+      "Cost        False\n",
+      "dtype: bool\n"
+     ]
+    }
+   ],
    "source": [
     "print(service_listing.isna().any())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "175ad427-e68e-4cd0-aa65-6ddc6ae8ebdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
